# SegmentationReview

./: .gitignore  CMakeLists.txt  LICENSE  NiftyViewer.py  README.md  SlicerLikertDLrating.py
.github/workflows/: main.yml
Resources/UI/: NiftyViewer.ui
SegmentationReview/: CMakeLists.txt  SegmentationReview.py
SegmentationReview/Resources/UI/: SegmentationReview.ui
SlicerSegReview/: SegmentationReview.py  SlicerSegReview.py
SlicerSegReview/Resources/UI/: SegmentationReview.ui
example_dataset/: annotations.csv  mappings.csv
example_dataset_no_mapping/: annotations.csv
example_dataset_with_mapping/: mapping.csv
example_dataset_with_mapping_unique/: mapping_unique.csv
